--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Phenology Friend</string>
     <string name="title_activity_add_new_record">Add New Record</string>
+    <string name="title_activity_add_observation_plant">Add Plant Observation.</string>
+    <string name="title_activity_add_observation_animal">Add Animal Observation.</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_about">About</string>
 
@@ -8,6 +10,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="add_new_record_text">Add a new record</string>
+    <string name="add_observation_plant_text">Add Plant Observation</string>
+    <string name="add_observation_animal_text">Add Animal Observation</string>
     <string name="about_text">About this app.</string>
     <string name="settings_text">Settings for this app.</string>
 </resources>
