--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,32 @@
 <resources>
     <string name="app_name">Phenology Friend</string>
-    <string name="title_activity_add_new_record">Add New Record</string>
     <string name="title_activity_add_observation_plant">Add Plant Observation.</string>
     <string name="title_activity_add_observation_animal">Add Animal Observation.</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_about">About</string>
 
     <string name="hello_world">Hello world!</string>
+
+    // Actionbar menu text
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
+
+    // Plant observation text.
     <string name="add_observation_plant_button_text">Add Plant Observation</string>
-    <string name="add_observation_animal_button_text">Add Animal Observation</string>
-    <string name="add_new_record_text">Add a new record</string>
     <string name="add_observation_plant_text">Add Plant Observation</string>
+
+    // Animal observation text.
+    <string name="add_observation_animal_button_text">Add Animal Observation</string>
     <string name="add_observation_animal_text">Add Animal Observation</string>
-    <string name="about_text">About this app.</string>
-    <string name="settings_text">Settings for this app.</string>
+
+    // About page text.
+    <string name="about_page_title">About this app.</string>
+    <string name="about_page_body"><b>Phenology (n):</b>
+
+        The word is derived from the Greek φαίνω (phainō), "to show, to bring to light, make to appear" + λόγος (logos), amongst others "study, discourse, reasoning".
+    </string>
+
+    // Settings page text.
+    <string name="settings_page_title">Settings for this app.</string>
+    <string name="settings_page_body">You can change the settings here.</string>
 </resources>
