--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,20 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_about">About</string>
 
-    <string name="hello_world">Hello world!</string>
 
     // Actionbar menu text
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
 
+    // MainActivity text.
+
+
+    // Latest Observations.
+    <string name="mainLastLabelText">Last Observations</string>
+    <string name="mainLatestPlantText">Plant:</string>
+    <string name="mainLatestAnimalText">Animal:</string>
+
+    // New Observation buttons.
     // Plant observation text.
     <string name="add_observation_plant_button_text">Add Plant Observation</string>
     <string name="add_observation_plant_text">Add Plant Observation</string>
@@ -19,14 +27,21 @@
     <string name="add_observation_animal_button_text">Add Animal Observation</string>
     <string name="add_observation_animal_text">Add Animal Observation</string>
 
+
     // About page text.
     <string name="about_page_title">About this app.</string>
-    <string name="about_page_body"><b>Phenology (n):</b>
-
+    <string name="about_page_body"><b>Phenology (n):\n</b>
         The word is derived from the Greek φαίνω (phainō), "to show, to bring to light, make to appear" + λόγος (logos), amongst others "study, discourse, reasoning".
     </string>
+    <string name="about_page_version">Ver: v1.0.0</string>
 
     // Settings page text.
     <string name="settings_page_title">Settings for this app.</string>
     <string name="settings_page_body">You can change the settings here.</string>
+    // WeatherUnderground API Key
+    <string name="settings_page_wuapi_text">WeatherUnderground API Key:</string>
+    <string name="settings_page_wuapi_hint">API Key</string>
+    // Update settings
+    <string name="settingsPageUpdateButton">Update Settings</string>
+
 </resources>
