--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,10 @@
     <string name="app_name">Phenology Friend</string>
     <string name="title_activity_add_observation_plant">Add Plant Observation.</string>
     <string name="title_activity_add_observation_animal">Add Animal Observation.</string>
-    <string name="title_activity_settings">Settings</string>
     <string name="title_activity_about">About</string>
 
-
     // Actionbar menu text
-    <string name="action_settings">Settings</string>
+    <string name="action_preferences">Settings</string>
     <string name="action_about">About</string>
 
     // MainActivity text.
@@ -19,14 +17,13 @@
     <string name="mainLatestAnimalText">Animal:</string>
 
     // New Observation buttons.
-    // Plant observation text.
-    <string name="add_observation_plant_button_text">Add Plant Observation</string>
-    <string name="add_observation_plant_text">Add Plant Observation</string>
+        // Plant observation text.
+        <string name="add_observation_plant_button_text">Add Plant Observation</string>
+        <string name="add_observation_plant_text">Add Plant Observation</string>
 
-    // Animal observation text.
-    <string name="add_observation_animal_button_text">Add Animal Observation</string>
-    <string name="add_observation_animal_text">Add Animal Observation</string>
-
+        // Animal observation text.
+        <string name="add_observation_animal_button_text">Add Animal Observation</string>
+        <string name="add_observation_animal_text">Add Animal Observation</string>
 
     // About page text.
     <string name="about_page_title">About this app.</string>
@@ -36,12 +33,13 @@
     <string name="about_page_version">Ver: v1.0.0</string>
 
     // Settings page text.
-    <string name="settings_page_title">Settings for this app.</string>
-    <string name="settings_page_body">You can change the settings here.</string>
-    // WeatherUnderground API Key
-    <string name="settings_page_wuapi_text">WeatherUnderground API Key:</string>
-    <string name="settings_page_wuapi_hint">API Key</string>
-    // Update settings
-    <string name="settingsPageUpdateButton">Update Settings</string>
+
+        // Credentials Header
+        <string name="preferences_header_credentials_title">Credentials / API Keys</string>
+        <string name="preferences_header_credentials_description">Enter information for getting external data such as the weather.</string>
+        // Credentials - WeatherUnderground API Key
+        <string name="preferences_credentials_wuapi_title">WeatherUnderground API Key:</string>
+        <string name="preferences_credentials_wuapi_summary">You must enter an API key here to get weather related data from the internet.</string>
+        <string name="preferences_credentials_wuapi_hint">Enter your API Key</string>
 
 </resources>
